<resources>
    <string name="app_name">Aquene Compagnion</string>

    <!-- Nom categorie d'action main -->
    <string name="main_action_ki">Ki</string>
    <string name="main_action_combat">Combat</string>
    <string name="main_action_skill">Compétences</string>

    <!-- Nom categorie de stance -->
    <string name="stance_cat_1">Défense</string>
    <string name="stance_cat_2">Attaque</string>
    <string name="stance_cat_3">Autre</string>

    <!-- Nom categorie de dons -->
    <string name="feat_active">Actif</string>
    <string name="feat_atk">Attaque</string>
    <string name="feat_def">Défense</string>
    <string name="feat_other">Autre</string>
    <string name="feat_stance">Posture</string>

    <string name="ability_base">Basique</string>
    <string name="ability_def">Défensive</string>
    <string name="ability_advanced">Avancée</string>

    <string name="setting_activity">Paramètres</string>
    <string name="stance_activity">Postures de combats</string>
    <string name="help_activity">Centre d\'aide</string>
    <string name="skill_mastery">Rang de maîtrise</string>
    <string name="skill_bonus">Bonus divers</string>
    <string name="custom_dialog_test_rolldice">Normal\n(dé 20)</string>
    <string name="custom_dialog_test_passive">Passif\n(+10)</string>
    <string name="custom_dialog_test_focus">Concentré\n(+20)</string>

    <string name="quadrantGeneralTitle">Caractéristiques</string>

    <string name="quadrantQ1Title">Caractéristiques de base</string>
    <string name="quadrantQ2Title">Ressources</string>
    <string name="quadrantQ3Title">Caractéristiques défensives</string>
    <string name="quadrantQ4Title">Caractéristiques avancées</string>

    <string name="health_dialog_heal">soin</string>
    <string name="health_dialog_dmg">dégât</string>
    <string name="health_dialog_regen">régén</string>
    <string name="health_dialog_shield">(pv temp)</string>

    <string name="jet_att_DEF">15,10,5</string>
    <string name="jet_att_flurry_DEF">18,18,13,13,8,8,3</string>
    <string name="current_campaign">illu</string>
    <string name="title_activity_saving">Sauvegarde</string>

    <string-array name="slot_choice_val">
        <item>eyes_slot</item>
        <item>shoulder_slot</item>
        <item>hand_slot</item>
        <item>ring1_slot</item>
        <item>mainhand_slot</item>
        <item>helm_slot</item>
        <item>neck_slot</item>
        <item>armor_slot</item>
        <item>belt_slot</item>
        <item>feet_slot</item>
        <item>face_slot</item>
        <item>chest_slot</item>
        <item>wrist_slot</item>
        <item>ring2_slot</item>
        <item>offhand_slot</item>
        <item>other_slot</item>
    </string-array>
    <string-array name="slot_choice_name">
        <item>Yeux</item>
        <item>Epaules</item>
        <item>Mains</item>
        <item>Anneau 1</item>
        <item>Main principale</item>
        <item>Casque</item>
        <item>Cou</item>
        <item>Armure</item>
        <item>Ceinture</item>
        <item>Pieds</item>
        <item>Visage</item>
        <item>Corps</item>
        <item>Poignets</item>
        <item>Anneau 2</item>
        <item>Main secondaire</item>
        <item>Hors emplacement</item>
    </string-array>


    <!-- Stats -->
    <string-array name="stat_bin">
        <item>10</item>
        <item>25</item>
        <item>50</item>
        <item>100</item>
    </string-array>

</resources>
