<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="stellarnear.aquene_dealer.Activities.StanceActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbarAppBarLayoutStance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@drawable/title_bar_gradient_stance">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarStance"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/stance_back_title_bar"
            app:popupTheme="@style/AppTheme.PopupOverlay">
        </android.support.v7.widget.Toolbar>



    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="3dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="@dimen/stance_icon_padding"
            android:weightSum="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/text_size_stance_cat"
                android:text="@string/stance_cat_1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/text_size_stance_cat"
                android:text="@string/stance_cat_2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/text_size_stance_cat"
                android:text="@string/stance_cat_3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/stance_linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"></LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
